Mon Mar 22 14:28:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Fix three reported bugs about inconsistent
	handling of space and punctuation in title, href description & head.
	Now makes destinction between tags that cause word breaks and those
	that don't, and which of the latter add space.

Mon Mar 22 14:25:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htmerge/docs.cc: Make htmerge -vv report reasons for deleting docs.

	* htmerge/words.cc: Fix to prevent description text words from
	clobbering anchor number of merged anchor text words.

Fri Mar 19 17:09:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Fix bug where noindex_start was empty, allow case
	insensitive matching of noindex_start & noindex_end.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Fix inconsistencies in documentation for noindex_start & noindex_end.

Fri Mar 19 17:05:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Add check for <a href=...> tag that is missing a
	closing </a> tag, terminating it at next href.

Fri Mar 19 17:00:18 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: Fix check of Content-type header in readHeader(),
	correcting bug introduced Jan 10 (for PR#91), and check against
	allowed external parsers.

	* htdig/HTML.cc: More lenient comment parsing, allows extra dashes.

Fri Mar 19 16:52:51 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Check for presence of more than one <title> tag.

	* htlib/mytimegm.cc: Fix Y2K problems.

Fri Mar 19 16:43:28 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Add patch from Gabriele to ensure META
	descriptions are parsed, even if 'description' is added to the
	keyword list.

Fri Mar 19 16:37:08 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/parser.h, htsearch/parser.cc: Clean up patch made for
	error messages, made on Feb 16.
